--- a/email 27/index.html
+++ b/email 27/index.html
@@ -30,7 +30,7 @@
           <table role="presentation" cellpadding="0" cellspacing="0" width="600" class="wrapper" style="width:37.5rem; max-width:37.5rem;">
             <tr>
               <td class="card" style="background:#F2EEF4; border-radius:.5rem; overflow:hidden;">
-                <table role="presentation" width="100%" cellpadding="0" cellspacing="0" class="hero" style="background:#502262;">
+                <table role="presentation" width="100%" cellpadding="0" cellspacing="0" class="hero" style="background:#291142;">
                   <tr>
                     <td align="center" style="padding:1.25rem 2rem; text-align:center;">
                       <a href="https://www.plurecomercial.com" target="_blank" rel="noopener" aria-label="Plure" style="text-decoration:none;">
@@ -43,32 +43,26 @@
                 <table role="presentation" width="100%" cellpadding="0" cellspacing="0">
                   <tr>
                     <td class="card-pad" style="padding:1.5rem 2rem 1.5rem 2rem; color:#291142;">
-                      <p style="margin:1rem 0 .75rem 0; font-size:.8125rem; line-height:1.5rem;">
-                        Olá <span>*|PRIMEIRO_NOME|*</span>, tudo bem?
-                      </p>
-                
+
                       <p style="margin:0 0 1rem 0; font-size:.8125rem; line-height:1.5rem; color:#291142;">
-                        Com o início do ano, chegam também novas demandas e, claro, a temporada mais vibrante do calendário: <strong>Verão e Carnaval</strong>.
-                        Eventos, ativações, ajustes de comunicação visual… tudo começa a ganhar ritmo já em janeiro.
+                        <strong>Antecipar seus projetos é o primeiro passo para ter um ano mais leve e eficiente.</strong>
                       </p>
                       <p style="margin:0 0 1rem 0; font-size:.8125rem; line-height:1.5rem; color:#291142;">
-                        <strong>E é exatamente por isso que estamos por aqui:</strong> para simplificar seus próximos projetos com agilidade e cuidado em cada etapa.
+                        Na Plure, oferecemos soluções completas para comunicação visual e brindes corporativos, com atendimento consultivo e gestão de ponta a ponta.
                       </p>
                       <p style="margin:0 0 1rem 0; font-size:.8125rem; line-height:1.5rem; color:#291142;">
-                        Na Plure, cuidamos de tudo comunicação visual, brindes e ativações completas, sempre com prazos claros e execução impecável.
-                      </p>
-                      <p style="margin:0 0 1rem 0; font-size:.8125rem; line-height:1.5rem; color:#291142;">
-                        Se você já está planejando ações para o Carnaval, campanhas de início de ano ou ajustes nos espaços da empresa, nossa equipe está pronta para apoiar.
+                        Com planejamento, você evita imprevistos, garante prazos e aproveita o melhor custo-benefício.<br>
+                        Deixe que nossa equipe cuide dos detalhes para que você foque no que mais importa: seus resultados.
                       </p>
                       <p style="margin:0 0 1rem 0; font-size:.8125rem; line-height:1.5rem; color:#291142;">
                         <a href="https://wa.me/5521998333323" target="_blank" rel="noopener" style="color:#291142; font-weight:700; text-decoration:underline;">
-                          Fale com a gente</a> e garanta um início de 2026 mais leve, organizado e com entregas de alto impacto.
+                          Fale com a Plure</a> e comece o ano economizando tempo e energia.
                       </p>
                       <p style="margin:0 0 1rem 0; font-size:.8125rem; line-height:1.5rem; color:#291142;">
                         Um abraço,<br>
                         Equipe Plure
                       </p>
-                    </td>cd
+                    </td>
                   </tr>
                 </table>
 
